# virust-secureboot

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
linker/: common.x
src/: main.rs
src/bootloader/: mod.rs
src/hal/: mod.rs
src/startup/: fpu.rs  mod.rs  vectors.rs
src/uds/: mod.rs
src/utils/: mod.rs
