[package]
name = "virust-secureboot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Secure Bootloader for S32K148 with UDS Protocol"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
embedded-hal = "1.0.0"
nb = "1.0.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
debug = true

[profile.dev]
debug = true 
